--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -1086,8 +1086,8 @@ layers:
                 draw:
                     lines:
                         # order: 3
-                        color: *ferry1
-                        width: [[12, 1.0px], [14, 1.5px], [15, 3px], [16, 5m]]
+                        color: red
+                        width: [[12, 1.0px], [14, 1.0px], [15, 1.0px], [16, 5m]]
                         outline:
                             width: [[12, 0px], [14, .5px], [17, 1px]]
         highway:
@@ -1964,10 +1964,10 @@ layers:
             draw:
                 lines:
                     # order: 3
-                    color: *ferry1
-                    width: [[12, 1.0px], [14, 1.5px], [15, 3px], [16, 5m]]
+                    color: [0.702,0.843,0.933]
+                    width: [[12, 0.5px], [14, 1.0px], [15, 1.0px], [16, 1.25px]]
                     outline:
-                        width: [[12, 0px], [14, .5px], [17, 1px]]
+                        width: 0px
         z-order:
             #filter: { $zoom: {min: 12} }
             draw:
