--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -962,7 +962,7 @@ layers:
                     color: [0.870,0.870,0.870]
                     order: 5
         water-boundary-ocean-early:
-            filter: { boundary: yes, kind: ocean, $zoom: {min: 4, max: 17} }
+            filter: { boundary: yes, kind: ocean, $zoom: {min: 1, max: 17} }
             draw:
                 line2:
                     style: lines
@@ -971,7 +971,7 @@ layers:
                     color: [[9,[0.396,0.833,0.920]],[10,[0.886,0.937,0.988]]]
                 lines:
                     order: 10
-                    width: [[9,0px],[10,1px]]
+                    width: [[1,0.25px],[6,0.5px],[7,0.75px],[9,0.75px],[10,1px]]
                     color: [0.396,0.833,0.920]
         water-boundary-ocean-late:
             filter: { boundary: yes, kind: ocean, $zoom: {min: 17} }
@@ -981,17 +981,17 @@ layers:
                     color: [0.886,0.937,0.988]
                     width: 20px
         water_boundaries-not-ocean:
-            filter: { boundary: yes, not: { kind: ocean }, $zoom: { min: 14 } }
+            filter: { boundary: yes, not: { kind: ocean }, $zoom: { min: 9 } }
             draw:
                 line3:
                     style: lines
                     order: 5
-                    width: [[14,3px],[16,4px],[18,6.0px]]
+                    width: [[9,0px],[10,2px],[12,3px],[14,3px],[16,4px],[18,6.0px]]
                     color: [0.886,0.937,0.988]
                 lines:
                     order: 5
                     color: [0.396,0.833,0.920]
-                    width: [[14,1.0px],[16,1.0px],[18,1.1px]]
+                    width: [[9,0.25px],[10,0.5px],[12,0.75px],[14,1.0px],[16,1.0px],[18,1.1px]]
                     join: round
         river:
             filter: { kind: [river,canal,stream,dam,ditch,drain], $zoom: { min: 12 } }
