--- a/eraser-map.yaml
+++ b/eraser-map.yaml
@@ -224,6 +224,7 @@ textures:
             dessert: [799, 1967, 36, 38]
             dog-run: [549, 1371, 36, 38]
             donut: [546, 1968, 36, 38]
+            dry-cleaning: [802, 1199, 36, 38]
             electronics-store: [806, 945, 36, 38]
             ev-charging-station: [799, 187, 36, 38]
             factory: [1055, 693, 36, 38]
@@ -2998,6 +2999,9 @@ layers:
                 dog-run:
                     filter: { kind: [dog_park, dog_run, dog-run] }
                     draw:   { icons: { sprite: dog-run } }
+                dry-cleaning:
+                    filter: { kind: [dry_cleaning] }
+                    draw:   { icons: { sprite: dry-cleaning } }
                 electronics-store:
                     filter: { kind: [electronics, electronics-store, computer] }
                     draw:   { icons: { sprite: electronics-store } }
@@ -3083,7 +3087,7 @@ layers:
                     filter: { kind: [landmark, memorial, monument, wayside_shrine, tower, beacon] }
                     draw:   { icons: { sprite: landmark } }
                 laundry:
-                    filter: { kind: [laundry, dry_cleaning] }
+                    filter: { kind: [laundry] }
                     draw:   { icons: { sprite: laundry } }
                 light-rail:
                     filter: { kind: [light-rail, light_rail, tram_stop] }
