--- a/bubble-wrap.yaml
+++ b/bubble-wrap.yaml
@@ -533,6 +533,23 @@ textures:
         url: images/building-grid.gif
         filtering: mipmap
 
+fonts:
+    Open Sans:
+        - weight: 300
+          url: fonts/open sans-300normal.ttf
+        - weight: normal
+          url: fonts/open sans-400normal.ttf
+        - weight: normal
+          style: italic
+          url: fonts/open sans-400italic.ttf
+        - weight: 600
+          url: fonts/open sans-600normal.ttf
+        - weight: 600
+          style: italic
+          url: fonts/open sans-600italic.ttf
+        - weight: bold
+          url: fonts/open sans-700normal.ttf
+
 sources:
     mapzen:
         type: MVT
@@ -1225,7 +1242,7 @@ layers:
                     fill: [0.314,0.591,0.640]
                     family: global.text_font_family
                     style: italic
-                    weight: 400
+                    weight: normal
                     size: 12px
         water-line-labels-z14:
             filter: { $zoom: [14] }
@@ -1350,7 +1367,7 @@ layers:
                 visible: false    # labels are enabled by each layer below
                 font:
                     family: global.text_font_family
-                    weight: 400
+                    weight: normal
                     fill: global.text_fill
 
         natural_earth_highways:
@@ -2954,14 +2971,12 @@ layers:
                     visible: false    # labels are enabled by each layer below
                     font:
                         family: global.text_font_family
-                        # weight: 500
                         fill: global.text_fill
             text-blend-order:
                 text_source: global.ux_language_text_source
                 visible: false    # labels are enabled by each layer below
                 font:
                     family: global.text_font_family
-                    # weight: 500
                     fill: global.text_fill
 
         continent:
@@ -2971,7 +2986,7 @@ layers:
                     visible: global.text_visible_continent
                     font:
                         size: 14px
-                        weight: 700
+                        weight: bold
                         # stroke: { color: global.text_stroke, width: 4 }
                         transform: uppercase
 
@@ -2988,7 +3003,7 @@ layers:
                     text_source: global.ux_language_text_source
                     font:
                         fill: [0.30,0.30,0.30]
-                        weight: 400
+                        weight: normal
                         size: 10px
                         transform: uppercase
         country-z3:
@@ -3052,7 +3067,7 @@ layers:
                     text_source: global.ux_language_text_source
                     font:
                         size: 13px
-                        weight: 400
+                        weight: normal
                         fill: [0.25,0.25,0.25]
                         # stroke: { color: global.text_stroke, width: 4 }
                         transform: uppercase
@@ -4374,7 +4389,7 @@ layers:
                         anchor: center
                         font:
                             fill: global.text_fill
-                            weight: 400
+                            weight: normal
 
                 z13places-1-ne:
                     filter: { scalerank: [0,1] }
@@ -4425,7 +4440,7 @@ layers:
                         visible: global.text_visible_neighbourhoods_e
                         font:
                             size: 9px
-                            weight: 400
+                            weight: normal
                             fill: global.text_fill
                             transform: uppercase
                             stroke: { color: global.text_stroke, width: 4 }
@@ -4450,7 +4465,7 @@ layers:
                         visible: global.text_visible_neighbourhoods_e
                         font:
                             size: 10px
-                            weight: 400
+                            weight: normal
                             fill: [0.300,0.300,0.300]
                             transform: uppercase
                             # stroke: { color: global.text_stroke, width: 2 }
@@ -4475,7 +4490,7 @@ layers:
                         visible: global.text_visible_neighbourhoods_e
                         font:
                             size: 11px
-                            weight: 400
+                            weight: normal
                             fill: [0.35,0.35,0.35]
                             transform: uppercase
                             # stroke: { color: global.text_stroke, width: 2 }
@@ -4500,7 +4515,7 @@ layers:
                         visible: global.text_visible_neighbourhoods
                         font:
                             size: 13px
-                            weight: 400
+                            weight: normal
                             fill: [0.000,0.000,0.000,0.500]
                             transform: uppercase
                             # stroke: { color: global.text_stroke, width: 3 }
@@ -4595,7 +4610,7 @@ layers:
                     priority: 66
                     font:
                         family: global.text_font_family
-                        weight: 400
+                        weight: normal
                         fill: [0.20,0.20,0.20]
                         size: 10px
                         stroke: { color: global.text_stroke, width: 1 }
@@ -4607,7 +4622,7 @@ layers:
                 priority: 66
                 font:
                     family: global.text_font_family
-                    weight: 400
+                    weight: normal
                     fill: [0.20,0.20,0.20]
                     size: 10px
                     stroke: { color: global.text_stroke, width: 1 }
@@ -4795,7 +4810,7 @@ layers:
                                 font:
                                     fill: [0.181,0.370,0.361]
     #                                size: 12px
-    #                                weight: 400
+    #                                weight: normal
                                     style: italic
                                     # stroke: { color: [0.870,0.870,0.870], width: 2 }
                     green-areas-z6:
@@ -5093,7 +5108,7 @@ layers:
                             text_wrap: 10
                             font:
                                 style: italic
-                                weight: 400
+                                weight: normal
                 early-sizing:
                     filter: { $zoom: { max: 14 } }
                     draw: { icons: { text: { font: { size: 11px } } } }
@@ -5149,7 +5164,7 @@ layers:
                         interactive: true
                         text_wrap: 10
                         font:
-                            weight: 400
+                            weight: normal
                             style: italic
                             fill: '#4ba3c5'
 
@@ -5411,7 +5426,7 @@ layers:
                         interactive: true
                         text_wrap: 10
                         font:
-                            weight: 400
+                            weight: normal
                             style: italic
                             fill: '#4ba3c5'
             bus-stop-bus-station-labels:
@@ -5980,7 +5995,7 @@ layers:
                         fill: [0.314,0.591,0.640] #global.text_fill_water
                         family: global.text_font_family
                         style: italic
-                        weight: 400
+                        weight: normal
                         size: 12px
                         # stroke: { color: [0.878,0.929,0.980], width: 2 }
         lakes-z5:
@@ -6006,7 +6021,7 @@ layers:
                 font:
                     fill: [0.314,0.591,0.640] #global.text_fill_water
                     family: global.text_font_family
-                    weight: 400
+                    weight: normal
                     size: 12px
                     transform: uppercase
         sea-early:
@@ -6103,7 +6118,7 @@ layers:
                     fill: grey
                     family: global.text_font_family
                     style: italic
-                    weight: 400
+                    weight: normal
                     size: 12px
                     stroke: { color: global.text_stroke_water, width: 3 }
         # debug only
@@ -6145,7 +6160,7 @@ layers:
                         size: 12px
                         style: italic
                         fill: global.text_fill
-                        weight: 400
+                        weight: normal
                         stroke: { color: global.text_stroke, width: 4 }
                         #transform: uppercase
 
@@ -6841,9 +6856,8 @@ layers:
                     interactive: true
                     priority: 16
                     font:
-                        weight: 500
                         fill: black
-                        weight: 400
+                        weight: normal
                         size: 11px
                         stroke: { color: white, width: 3 }
         poi_labels-z14:
